buit schedule course component and placed on grid

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,9 @@
 @import 'library';
 @import 'arrow'; 
 @import 'libraryCourse';
+@import 'scheduleCourse';
+@import 'schedule';
+
 
 
 $color-one: #6F48CE;
