--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,6 +9,9 @@
 
 $color-one: #6F48CE;
 $color-two: #32CBE8;
+$color-blue: #487BCE;
+$color-gray: #4D4D4D;
+
 
 
 .home {
@@ -18,6 +21,8 @@ $color-two: #32CBE8;
     grid-template-columns: [library-s] 1fr 1fr[library-e schedule-s] 1fr [schedule-e];
     grid-template-rows: 1fr;
     font-size: 12px;
+
+    
 }
 
 .schedule {
