--- a/src/style/libraryCourse.scss
+++ b/src/style/libraryCourse.scss
@@ -1,15 +1,25 @@
+@import 'variables';
+
 .library-course {
     display: grid;
     grid-template-columns: repeat(auto-fit, 1fr);
     grid-template-rows: 50px 1fr;
-    background-color: cornflowerblue;
     
+   
+    &__line{
+        grid-column: 1/-1;
+    
+    }
 
     &__title-check {
-        grid-row: 1/2; 
+        grid-row: 1/2;
+        grid-column: 1; 
         display: flex;
-        position: relative;
+        
+        
     }
+
+    
 
     &__description {
         grid-row: 2/3;
@@ -29,3 +39,40 @@
     }
     
 }
+    .library-course {
+        padding: 15px 25px;
+        &:hover {
+            background-color:white;
+            box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
+        }
+
+        &__title {
+            color: $color-gray;
+            font-family: 'Lato';
+            font-size: 18px;
+            line-height: 22px;
+            
+            
+        }
+        &__line {
+            border-bottom: 1px solid #F2F2F2;
+        }
+
+        &__icon {
+           color: $color-blue; 
+        }
+        &__description {
+            label {
+                color: $color-blue;
+                font-family: 'Alegreya';
+                font-size: 16px;
+                font-weight: bold;
+                text-align: center;
+            }
+            p {
+                color: $color-gray;
+                font-family: 'Lato';
+                font-size: 16px;
+            }
+        }
+    }
