--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,13 +4,11 @@
 @import 'scheduleCourse';
 @import 'schedule';
 @import 'progressTracker';
+@import 'variables';
 
 
 
-$color-one: #6F48CE;
-$color-two: #32CBE8;
-$color-blue: #487BCE;
-$color-gray: #4D4D4D;
+
 
 
 
