--- a/src/style/libraryCourse.scss
+++ b/src/style/libraryCourse.scss
@@ -39,11 +39,17 @@
     }
     
 }
+    @mixin solid-course {
+        background-color:white;
+        box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
+    }
+    .library-course-selected {
+        @include solid-course();
+    }
     .library-course {
         padding: 15px 25px;
         &:hover {
-            background-color:white;
-            box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
+            @include solid-course;
         }
 
         &__title {
