--- a/src/style/libraryCourse.scss
+++ b/src/style/libraryCourse.scss
@@ -2,7 +2,7 @@
 
 .library-course {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 1fr);
+    grid-template-columns: 1fr 45px 58px;
     grid-template-rows: 50px 1fr;
     
    
@@ -18,6 +18,7 @@
         
         
     }
+   
 
     
 
@@ -28,14 +29,15 @@
     &__arrow {
         grid-row: 1/2;
         position: absolute;
-        margin-left: 57%;
-        margin-top: 7px;
+        margin-left: 56%;
+        margin-top: 23px;
        
     }
     &__action {
         grid-row: 1/2;
         position: absolute;
         margin-left: 59%;
+        margin-top: 15px;
     }
     
 }
@@ -66,6 +68,8 @@
 
         &__icon {
            color: $color-blue; 
+           padding-left: 16px;
+           font-size: 16px;
         }
         &__description {
             label {
