fixed up grid and animations

--- a/src/style/libraryCourse.scss
+++ b/src/style/libraryCourse.scss
@@ -3,7 +3,7 @@
 .library-course {
     display: grid;
     grid-template-columns: 1fr 45px 58px;
-    grid-template-rows: 50px 1fr;
+    grid-template-rows: 32px 1fr;
     
    
     &__line{
@@ -20,8 +20,6 @@
     }
    
 
-    
-
     &__description {
         grid-row: 2/3;
     }
@@ -31,9 +29,10 @@
         position: absolute;
         margin-left: 56%;
         margin-top: 23px;
-       
     }
     &__action {
+        opacity: 0;
+        transition: all .3s ease;
         grid-row: 1/2;
         position: absolute;
         margin-left: 59%;
@@ -52,6 +51,9 @@
         padding: 15px 25px;
         &:hover {
             @include solid-course;
+            .library-course__action {
+                opacity: 1;
+            }
         }
 
         &__title {
@@ -62,9 +64,7 @@
             
             
         }
-        &__line {
-            border-bottom: 1px solid #F2F2F2;
-        }
+        
 
         &__icon {
            color: $color-blue; 
@@ -72,7 +72,11 @@
            font-size: 16px;
         }
         &__description {
+          
+            border-top: 1px solid #F2F2F2;
+            width: 110%;
             label {
+                padding-top: 15px;
                 color: $color-blue;
                 font-family: 'Alegreya';
                 font-size: 16px;
