--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,5 @@
 @import 'library';
+@import 'gradient';
 @import 'arrow'; 
 @import 'libraryCourse';
 @import 'scheduleCourse';
@@ -9,32 +10,13 @@
 
 
 
-
-
-
-
 .home {
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-columns: [library-s] 1fr 1fr[library-e schedule-s] 1fr [schedule-e];
+    grid-template-columns: [library-s] 1fr 1fr  [schedule-s] 50px [library-e] 1fr [schedule-e];
     grid-template-rows: 1fr;
     font-size: 12px;
 
     
-}
-
-.schedule {
-    grid-column: schedule-s/schedule-e;
-    position: relative;
-    height: 100%;
-    width: 100%;
-
-}
-.gradient {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(120deg, $color-one 0%, $color-two 100%);
-    z-index: -10;
 }
