--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -4,3 +4,5 @@ $color-one: #6F48CE;
 $color-two: #32CBE8;
 $color-blue: #487BCE;
 $color-gray: #4D4D4D;
+$color-subtle-gray: rgba(255, 255, 255, 0.52);
+$color-subtle-black: #333;
