--- a/src/style/progressTracker.scss
+++ b/src/style/progressTracker.scss
@@ -1,15 +1,29 @@
+@import 'variables';
+
 .progress-tracker {
     grid-row: progress-s/progress-e;
-
+    align-items: center;
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr 76px;
-    background-color: rgba( 255,255,255,0.3);
+    grid-template-columns: 33px [title-s] 1fr [title-e percentage-s] 76px [percentage-e];
+    background-color: rgba( 255,255,255,0.1);
+    width: 100%;
+    height: 76px;
+    font-family: 'Alegreya';
+    font-size: 16px;
+    color: white;
+    align-self: end;
+
+   
 
     &__title {
-        grid-column: 1/2;
+        grid-column: title-s/title-s;
+        grid-row: 1/2;
+         @include border-left();
     }
     &__percentage {
-        grid-column: 2/3
+        grid-column: percentage-s/percentage-e;
+        grid-row: 1/2;
+        justify-self: center;
     }
 }
