--- a/src/style/schedule.scss
+++ b/src/style/schedule.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .schedule {
     grid-row: 1/-1;
     grid-column: schedule-s/schedule-e;
@@ -6,21 +8,20 @@
     width: 100%;
     
     display: grid;
-    grid-template-rows: 100px repeat(5, 80px ) [progress-s] 76px [progress-e];
+    grid-template-rows: [space-one-e] 1fr [space-one-e title-s] 100px [title-e] repeat(5, 80px ) [progress-s] 1fr [progress-e];
     grid-row-gap: 22px;
     z-index: -10;
     align-items: center;
     justify-items: center;
 
     align-content: center;
-    
-    &__title {
 
-        border-left: 1px solid $color-subtle-gray;
-        padding-left: 30px;
+    &__title {
+        grid-row: title-s/title-e;
         color: white;
         font-family: 'Alegreya';
         font-size: 20px;
         text-align: center;
+        @include border-left;
     }
 }
