--- a/src/style/library.scss
+++ b/src/style/library.scss
@@ -1,15 +1,22 @@
 @import 'variables';
 .library {
     grid-column: library-s/library-e;
+   
+    overflow: hidden;
+   width: 100%;
+   height: 100%;
+    grid-row: 1/-1;
+
+  &__container {  
     display: grid;
     grid-template-rows: [title-s] 100px [title-e courses-s ] repeat(auto-fit, 1fr) [courses-e];
     grid-row-gap: 22px;
+    padding-top: 7%;
+    padding-left: 5%;
 
-    padding-left: 100px;
-    padding-top: 100px;
-    grid-row: 1/-1;
 
-    &__title {
+
+      &__title {
        color: $color-blue;
        font-family: 'Alegreya';
        font-size: 34px;
@@ -17,5 +24,6 @@
        border-left: 2px solid $color-blue ;
        padding: 20px 40px;
     }
+}
 
 }
