--- a/src/style/schedule.scss
+++ b/src/style/schedule.scss
@@ -13,7 +13,8 @@
     align-items: center;
     justify-items: center;
 
-    align-content: center;
+    padding-top: 237px;
+
     align-content: start;
 
     &__title {
