--- a/src/style/arrow.scss
+++ b/src/style/arrow.scss
@@ -1,11 +1,12 @@
 .arrow {
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    border-top: 7px solid $color-blue;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-top: 8px solid $color-blue;
 
-   
+    height: 0;
+    width: 0;
 
-   transition: all .3s ease;
+    transition: all .3s ease;
 }
 
 .arrow-closed {
