--- a/src/style/gradient.scss
+++ b/src/style/gradient.scss
@@ -1,7 +1,8 @@
+@import 'variables';
 .gradient {
     position: absolute;
     height: 100%;
     width: 100%;
-    background: linear-gradient(120deg, $color-one 0%, $color-two 100%);
+    background: linear-gradient(120deg, $color-purple 0%, $color-light-blue 100%);
     z-index: -10;
 }
