--- a/src/style/libraryCourse.scss
+++ b/src/style/libraryCourse.scss
@@ -5,90 +5,84 @@
     grid-template-columns: 1fr 45px 58px;
     grid-template-rows: 32px 1fr;
 
+    align-items: center;
     z-index: 50;
-    
-   
-    &__line{
-        grid-column: 1/-1;
-    
-    }
 
+    margin-right: 10px;
+    
     &__title-check {
         grid-row: 1/2;
-        grid-column: 1; 
         display: flex;
-        
-        
+        grid-column: 1/2;
     }
-   
-
-    &__description {
-        grid-row: 2/3;
-    }
-
     &__arrow {
         grid-row: 1/2;
-        position: absolute;
-        margin-left: 53%;
-        margin-top: 23px;
+        grid-column: 2/3;
     }
     &__action {
         opacity: 0;
         transition: all .3s ease;
         grid-row: 1/2;
-        position: absolute;
-        margin-left: 56%;
-        margin-top: 15px;
+        grid-column: 3/4;
+        justify-self: center;
     }
-    
+    &__description {
+        padding-top: 24px;
+        grid-row: 2/3;
+        grid-column: 1/-1;
+    }
 }
-    @mixin solid-course {
-        background-color:white;
-        box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
-    }
-    .library-course-selected {
-        @include solid-course();
-    }
-    .library-course {
-        padding: 15px 25px;
-        &:hover {
-            @include solid-course();
-            .library-course__action {
-                opacity: 1;
-            }
-        }
 
-        &__title {
+@mixin solid-course {
+    background: white;
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
+}
+
+.library-course-selected {
+    @include solid-course();
+}
+
+.library-course {
+
+    // padding: 25px;
+    padding: 12px 0;
+    padding-left: 25px;
+
+    &:hover {
+        @include solid-course();
+        .library-course__action {
+            opacity: 1;
+        }
+    }
+
+    &__title {
+        color: $color-gray;
+        font-family: 'Lato';
+        font-size: 18px;
+        line-height: 22px;
+    }
+
+    &__icon {
+        color: $color-blue;
+        padding-left: 16px;
+        font-size: 24px;
+    }
+
+    &__description {
+        margin-top: 19px;
+        border-top: 1px solid #F2F2F2;
+        label {
+            color: $color-blue;
+            font-family: 'Alegreya';
+            font-size: 16px;
+            font-weight: bold;
+            text-align: center;
+        }
+        p {
             color: $color-gray;
             font-family: 'Lato';
-            font-size: 18px;
-            line-height: 22px;
-            
-            
-        }
-        
-
-        &__icon {
-           color: $color-blue; 
-           padding-left: 16px;
-           font-size: 16px;
-        }
-        &__description {
-          
-            border-top: 1px solid #F2F2F2;
-            width: 110%;
-            label {
-                padding-top: 15px;
-                color: $color-blue;
-                font-family: 'Alegreya';
-                font-size: 16px;
-                font-weight: bold;
-                text-align: center;
-            }
-            p {
-                color: $color-gray;
-                font-family: 'Lato';
-                font-size: 16px;
-            }
+            font-size: 16px;
         }
     }
+
+}
